--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#shop">Shop</a></li>
             <li><a href="#delivery">Promotions</a></li>
-            <li><a href="#app">Event</a></li>
+            <li><a href="#app">Events</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
 <!--========== SCROLL TOP ==========-->
